force-app/main/default/objects/ObjectRequirement__c/ObjectRequirement__c.object-meta.xml
<CustomObject>
    <label>オブジェクト定義</label>
    <nameField>
        <label>項目ラベル</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>