force-app/main/default/objects/ObjectRequirement__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <label>API名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>