force-app/main/default/objects/ObjectRequirement__c/fields/decimalPosition__c.field-meta.xml
<CustomField>
    <fullName>decimalPosition__c</fullName>
    <defaultValue>0</defaultValue>
    <label>小数点の位置</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>