force-app/main/default/objects/ObjectRequirement__c/fields/defaultValue__c.field-meta.xml
<CustomField>
    <fullName>defaultValue__c</fullName>
    <label>デフォルト値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>