force-app/main/default/objects/ObjectRequirement__c/fields/externalID__c.field-meta.xml
<CustomField>
    <fullName>externalID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>外部IDとしての利用</label>
    <type>Checkbox</type>
</CustomField>