force-app/main/default/objects/ObjectRequirement__c/fields/function__c.field-meta.xml
<CustomField>
    <fullName>function__c</fullName>
    <label>数式の記載</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>