force-app/main/default/objects/ObjectRequirement__c/fields/globalPickList__c.field-meta.xml
<CustomField>
    <fullName>globalPickList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>グローバル選択肢を検討</label>
    <type>Checkbox</type>
</CustomField>