force-app/main/default/objects/ObjectRequirement__c/fields/helpText__c.field-meta.xml
<CustomField>
    <fullName>helpText__c</fullName>
    <label>ヘルプテキスト</label>
    <type>TextArea</type>
</CustomField>