force-app/main/default/objects/ObjectRequirement__c/fields/length__c.field-meta.xml
<CustomField>
    <fullName>length__c</fullName>
    <label>文字数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>