force-app/main/default/objects/ObjectRequirement__c/fields/objectAPIName__c.field-meta.xml
<CustomField>
    <fullName>objectAPIName__c</fullName>
    <label>オブジェクトAPI名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>objectAPIName</valueSetName>
    </valueSet>
</CustomField>