force-app/main/default/objects/ObjectRequirement__c/fields/pickListValue__c.field-meta.xml
<CustomField>
    <fullName>pickListValue__c</fullName>
    <label>選択リスト値</label>
    <type>TextArea</type>
</CustomField>