force-app/main/default/objects/ObjectRequirement__c/fields/ref_object__c.field-meta.xml
<CustomField>
    <fullName>ref_object__c</fullName>
    <label>参照オブジェクト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>objectAPIName</valueSetName>
    </valueSet>
</CustomField>