force-app/main/default/objects/ObjectRequirement__c/fields/requiredField__c.field-meta.xml
<CustomField>
    <fullName>requiredField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>必須項目</label>
    <type>Checkbox</type>
</CustomField>