force-app/main/default/objects/ObjectRequirement__c/fields/uniqueField__c.field-meta.xml
<CustomField>
    <fullName>uniqueField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ユニーク性の担保</label>
    <type>Checkbox</type>
</CustomField>