force-app/main/default/objects/ObjectRequirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>objectAPIName__c</columns>
    <columns>dataType__c</columns>
    <columns>API__c</columns>
    <columns>requiredField__c</columns>
    <columns>document__c</columns>
    <columns>helpText__c</columns>
    <columns>ref_object__c</columns>
    <columns>pickListValue__c</columns>
    <columns>length__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>