force-app/main/default/objects/ObjectRequirement__c/listViews/Opportunity.listView-meta.xml
<ListView>
    <fullName>Opportunity</fullName>
    <columns>NAME</columns>
    <columns>objectAPIName__c</columns>
    <columns>dataType__c</columns>
    <columns>API__c</columns>
    <columns>requiredField__c</columns>
    <columns>document__c</columns>
    <columns>helpText__c</columns>
    <columns>ref_object__c</columns>
    <columns>pickListValue__c</columns>
    <columns>length__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>objectAPIName__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>商談</label>
</ListView>